welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:2: error: not found: value nDoubles
  if (nDoubles==true && die1==die2) {
      ^withoutDoubles:4: error: reassignment to val
      die1=1
          ^withoutDoubles:6: error: reassignment to val
      die1=die1+1
          ^